# mlops-end2end

./: .gitignore  README.md  pyproject.toml  requirements.txt
dags/: utils.py
deployments/: Dockerfile  requirements.txt
notebooks/: experiments.ipynb
src/: data_ingest.py
