[tool.poetry]
name = "mlops-end2end"
version = "0.1.0"
description = "Example pipeline for MLops Developments"
authors = ["longlb1 <longlb@seatechit.com.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
pandas = "^2.1.0"
mlflow = "^2.7.0"
psycopg2-binary = "^2.9.7"
psycopg2 = "^2.9.7"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/